--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "emailjs-com": "^2.6.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typewriter-effect": "^2.17.0",
     "web-vitals": "^1.1.2"
